# stats-and-ml

./: README.md
ml-template/: ferguson2024.xlsx  gss_data.csv  pyproject.toml
ml-template/ml_template/: 000_test.py  001_central_tendency.py  002_variability.py  003_skew_and_curtosis.py  ferguson.py  gss.py
ruststats/: Cargo.toml
ruststats/src/: central_tendency.rs  main.rs
